Tue Dec 16 21:01:20 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/workers/Test_Logger/TestLogger.xme:

          . Added the connect_using_name () action.

Tue Dec 16 16:52:07 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/Property_Map.h:
        * cuts/utils/Property_Map.inl:

          . Fixed compilation errors on non-Windows systems.

Tue Dec 16 16:42:48 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/naomi/CUTS/emulation/CUTS/Emulation.java:

          . Updated the emulation connector to run ISISlab experiments in
            batch mode by default. This will allow experiments to run whenever
            there are enough computing resources.

Tue Dec 16 06:02:37 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/naomi/CUTS/emulation/CUTS/Emulation.java:
        * MDE/naomi/CUTS/emulation/emulation.build:
        * contrib/java/fireant.jar:

          . New version of the emulation connector that works w/ the latest
            version of ISISlab.

        * contrib/java/xml-apis.jar:

          . Missing JAR file.

        * contrib/java/fireantisis.jar:

          Removed this file.

Tue Dec 16 05:18:34 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/Property_Map.h:
        * cuts/utils/Property_Map.inl:

          . Implemented the map () method, which gives clients direct
            access to the underlying hash table.

        * cuts/workers/CPU/CPU_Worker.h:
        * cuts/workers/CPU/CPU_Worker.inl:
        * cuts/workers/CPU/CPU_Worker.cpp:
        * cuts/workers/CPU/CPU_Worker.mpc:
        * cuts/workers/CPU/CUTS_CPU_Worker.xme:

          . Implemented load-dependent CPU workload generator. It uses
            a simple Java-like property file to configure its load-dependent
            workloads.

Tue Dec 16 01:27:39 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/Property_Expander.cpp:
