@@ -1,3 +1,10 @@
+Thu Dec 18 20:37:40 UTC 2008  Pooja Varshneya  <varshneya_p@signalprocessor.guts.isislab.vanderbilt.edu>
+
+	* etc/emulab/generate-logging-client-map.sh:
+ 
+          . Updated script to use naming service instead of
+	    corbaloc to resolve logging clients.
+
 Tue Dec 16 21:01:20 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * cuts/workers/Test_Logger/TestLogger.xme:
